--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@ layout: compress
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width, initial-scale=1">
 
+    <title>{{ site.name }}</title>
+
     <meta name=description content="{{ site.bio }}">
     <meta name=author content="{{ site.name }}">
 
